--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^7.2.0",
+    "@react-native-firebase/firestore": "^7.1.5",
     "expo": "~37.0.3",
+    "firebase": "^7.15.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "@babel/core": "^7.8.6",
+    "babel-preset-expo": "~8.1.0"
   },
   "private": true
 }
