--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@react-native-firebase/app": "^7.2.0",
     "@react-native-firebase/firestore": "^7.1.5",
     "expo": "~37.0.3",
-    "firebase": "^7.15.0",
+    "firebase": "7.9.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
